# zmodule

./: .gitignore  README.md  lc_photoz.ipynb  multipletargets_photoz.ipynb  photoz.py  pyproject.toml  requirements.txt  sed_photoz.ipynb  setup.py
.ipynb_checkpoints/: sed_photoz-checkpoint.ipynb
data/lc/: GRB_22.txt
data/lc/.ipynb_checkpoints/: GRB_23-checkpoint.txt
data/lc/z_october22/: GRB_1.txt  GRB_10.txt  GRB_101.txt  GRB_103.txt  GRB_109.txt  GRB_11.txt  GRB_110.txt  GRB_111.txt  GRB_112.txt  GRB_113.txt  GRB_115.txt  GRB_119.txt  GRB_120.txt  GRB_121.txt  GRB_123.txt  GRB_126.txt  GRB_127.txt  GRB_128.txt  GRB_13.txt  GRB_130.txt  GRB_132.txt  GRB_133.txt  GRB_134.txt  GRB_136.txt  GRB_139.txt  GRB_14.txt  GRB_141.txt  GRB_143.txt  GRB_144.txt  GRB_147.txt  GRB_149.txt  GRB_15.txt  GRB_151.txt  GRB_152.txt  GRB_154.txt  GRB_156.txt  GRB_159.txt  GRB_160.txt  GRB_161.txt  GRB_163.txt  (+266 more)
data/sed/: GRB140209A.txt  GRB250314A.txt  GRB250924A.txt  GRB250925A.txt  GRB251002A.txt  GRB251003A.txt  GRB251003A_BS.txt
data/sed/.ipynb_checkpoints/: GRB080906-checkpoint.txt
pyGRBaglow/: pyproject.toml
pyGRBaglow/pyGRBaglow/: igm_cy.c  reddening.py  reddening_cy.c  synchrotron_model.c
pyGRBz/: README.md  lc_pipeline_to_lc_photoz.py  pyproject.toml  requirements_dev.txt
pyGRBz/pyGRBz/: create_SED.py  estimation.py  extinction_correction.py  fitting.py  fluxes_cy.c  formatting.py  formatting_original.py  plotting.py  pyGRBz.py  utils.py
pyGRBz/pyGRBz/data/lc/: GRB_24.txt  GRB_25.txt
pyGRBz/pyGRBz/data/lc/z_october22/: GRB_0.txt  GRB_100.txt  GRB_102.txt  GRB_104.txt  GRB_105.txt  GRB_106.txt  GRB_107.txt  GRB_108.txt  GRB_114.txt  GRB_116.txt  GRB_117.txt  GRB_118.txt  GRB_12.txt  GRB_122.txt  GRB_124.txt  GRB_125.txt  GRB_129.txt  GRB_131.txt  GRB_135.txt  GRB_137.txt  GRB_138.txt  GRB_140.txt  GRB_142.txt  GRB_145.txt  GRB_146.txt  GRB_148.txt  GRB_150.txt  GRB_153.txt  GRB_155.txt  GRB_157.txt  GRB_158.txt  GRB_16.txt  GRB_162.txt  GRB_165.txt  GRB_166.txt  GRB_167.txt  GRB_17.txt  GRB_172.txt  GRB_173.txt  GRB_176.txt  (+271 more)
pyGRBz/pyGRBz/transmissions/1/: XRT0.txt  XRT10.txt  XRT11.txt  XRT12.txt  XRT13.txt  XRT14.txt  XRT15.txt  XRT16.txt  XRT17.txt  XRT18.txt  XRT2.txt  XRT3.txt  XRT5.txt  XRT6.txt  XRT7.txt  XRT8.txt  XRT9.txt
pyGRBz/pyGRBz/transmissions/coatli/: g.txt  i.txt  r.txt  riz.txt  z.txt
pyGRBz/pyGRBz/transmissions/hawki/: H.txt  J.txt  Ks.txt  Y.txt
pyGRBz/pyGRBz/transmissions/meerlicht/: g.txt  i.txt  q.txt  r.txt  u.txt  vr.txt  z.txt
pyGRBz/pyGRBz/transmissions/mxt/: MXT1.txt
pyGRBz/pyGRBz/transmissions/mxt/backup/: MXT1.txt  MXT2.txt  MXT3.txt
pyGRBz/pyGRBz/transmissions/mxt/turpin 9 bands/: MXT1.txt  MXT2.txt  MXT3.txt  MXT4.txt  MXT5.txt  MXT6.txt  MXT7.txt  MXT8.txt  MXT9.txt
pyGRBz/pyGRBz/transmissions/osiris/: g.txt  i.txt  r.txt  z.txt
pyGRBz/pyGRBz/transmissions/tng/: J.txt  K.txt
pyGRBz/pyGRBz/transmissions/uvot/: b.txt  u.txt  uvm2.txt  uvw1.txt  uvw2.txt  v.txt
pyGRBz/pyGRBz/transmissions/xrt/: XRT1.txt  XRT4.txt
pyGRBz/pyGRBz/transmissions/xrt_original/: XRT.txt  XRT1.txt  XRT2.txt  XRT3.txt  XRT4.txt  XRT5.txt  XRT6.txt  XRT7.txt  XRT8.txt  XRT9.txt
