
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
name = "pyGRBz"
version = "0.1.0"
description = "Python Bayesian photometric redshift code dedicatedto Gamma-Ray Bursts"
keywords = ["pyGRBz", "Gamma-Ray Burst", "redshift photometric", "Bayesian", "MCMC"]
readme = "README.md"
authors = [
    {name = "David Corre", email = "david.corre.fr@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "Click>=6.0",
    "astropy",
    "corner",
    "cython",
    "emcee",
    "extinction",
    "iminuit",
    "jupyter",
    "matplotlib",
    "numpy",
    "pyGRBaglow",
    "scipy",
    "sfdmap",
]
license = {text = "MIT license"}
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/dcorre/pyGRBz"
Downloads = "https://github.com/dcorre/pyGRBz/archive/v0.1.0.tar.gz"

[project.scripts]
pyGRBz = "pyGRBz.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
